# full2weights

./: README.md  pyproject.toml
src/model_converter/: convert_model.py
