[project]
name = "full2weights"
version = "0.1.0"
description = "for one specific PyTorch 2.0.1 full model , convert it to state_dict for forward compatibility"
authors = [
    { name = "Ruby", email = "scilavisher@gmail.com" }
]
requires-python = "==3.10.16"
dependencies = [
    "torch==2.0.1",
    "numpy==1.24.3",
    "torch-geometric==2.3.1",
    "torch-scatter==2.1.1",
    "torch-sparse==0.6.17",
    "torch-cluster==1.6.1",
    "torch-spline-conv==1.2.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false